notifications: disconnect signal handler

Regression from 302df76438ad7f7cba75c2fe949daffb9d701155.

https://bugzilla.gnome.org/show_bug.cgi?id=765128